Fixing nav content overflow issues

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,3 +1,7 @@
+.all-transactions {
+  overflow-x: hidden;
+}
+
 .transactions {
   display: flex;
   flex-direction: column;
