--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -1,23 +1,27 @@
 .home-container {
   width: 100%;
   /* min-width: 75px; */
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background-color: limegreen;
   padding-top: 5em;
   
-  /* overflow-x: hidden; */
+  overflow: hidden;
+  display: flex;
   /* position: fixed; */
-  /* top: 0; */
-  /* left: 0; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
+  flex-direction: column;
+
+}
+
+.home-container::-webkit-scrollbar {
+  display: none;
 }
 
 .nav-container {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   padding-bottom: 5em;
 }
 
@@ -42,5 +46,17 @@
   .payment-btn {
     width: 85%;
     padding: 0;
+  }
+
+  .nav-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 3em;
+  }
+
+  .nav-item {
+    padding: 2em 0;
   }
 }
